assets/css/app.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";
@import url('https://fonts.googleapis.com/css?family=Pacifico');
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,400&display=swap');

*{
  @apply font-poppins
}

@layer components {
  .card {
    background-color: theme('colors.white');
    border-radius: theme('borderRadius.lg');
    padding: theme('spacing.6');
    box-shadow: theme('boxShadow.xl');
  }
}

@layer base {
  .font-outline-2 {
    -webkit-text-stroke: 1px rgb(105, 50, 7);
  }

  .font-outline-4 {
    -webkit-text-stroke: 4px black;
  }
}

.scoreboard {
  font-family: 'Poppins', sans-serif;
  background-color: #f2f2f2;
  padding: 2rem;
}

.scoreboard h1 {
  font-size: 3rem;
  text-align: center;
  margin-bottom: 2rem;
}

.users {
  display: grid;
  gap: 2rem;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
}

.user {
  background-color: #fff;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  border-radius: 1rem;
  overflow: hidden;
  transition: transform 0.2s ease-out;
}

.user:hover {
  transform: translateY(-5px);
}

.user-info {
  padding: 1rem;
}

.user-info .date {
  font-size: 1.2rem;
  color: #ffaa00;
}

.user-info .name {
  display: block;
  font-size: 1.5rem;
  color: #333;
  text-decoration: none;
  margin-top: 1rem;
}

.user-info .name:hover {
  color: #ffaa00;
}

.user-info .username {
  font-size: 1rem;
  color: #aaa;
  margin-left: 0.5rem;
}

.user-score {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem;
}

.user-score .score-label {
  font-size: 1.2rem;
  color: #fffcfc;
}

.user-score .score {
  font-size: 2rem;
  font-weight: bold;
  color: #ffaa00;
}



@keyframes blinkH1 {
  0% {
    color: #fff;
    text-shadow: 0px 0px 20px #00aad4;
  }

  19% {
    color: #fff;
    text-shadow: 0px 0px 20px #00aad4;
  }

  20% {
    color: #9E9E9E;
    text-shadow: none;
  }

  21% {
    color: #fff;
    text-shadow: 0px 0px 20px #00aad4;
  }

  60% {
    color: #fff;
    text-shadow: 0px 0px 20px #00aad4;
  }

  61% {
    color: #9E9E9E;
    text-shadow: none;
  }

  62% {
    color: #fff;
    text-shadow: 0px 0px 20px #00aad4;
  }

  63% {
    color: #9E9E9E;
    text-shadow: none;
  }

  64% {
    color: #fff;
    text-shadow: 0px 0px 20px #00aad4;
  }

  100% {
    color: #fff;
    text-shadow: 0px 0px 20px #00aad4;
  }
}

@keyframes blinkH1After {
  0% {
    color: #00aad4;
  }

  19% {
    color: #00aad4;
  }

  20% {
    color: transparent;
  }

  21% {
    color: #00aad4;
  }

  60% {
    color: #00aad4;
  }

  61% {
    color: transparent;
  }

  62% {
    color: #00aad4;
  }

  63% {
    color: transparent;
  }

  64% {
    color: #00aad4;
  }

  100% {
    color: #00aad4;
  }
}

@keyframes blinkH1Before {
  0% {
    background: #00aad4;
  }

  19% {
    background: #00aad4;
  }

  20% {
    background: transparent;
  }

  21% {
    background: #00aad4;
  }

  60% {
    background: #00aad4;
  }

  61% {
    background: transparent;
  }

  62% {
    background: #00aad4;
  }

  63% {
    background: transparent;
  }

  64% {
    background: #00aad4;
  }

  100% {
    background: #00aad4;
  }
}

.header {
  font-weight: 400;
  margin: 0px;
  font-size: 1.2rem;
  color: #fff;
  text-shadow: 0px 0px 20px #00aad4;
  -webkit-animation: blinkH1 5s infinite;
  animation: blinkH1 5s infinite;
}

.header:after {
  top: 0;
  left: 0;
  color: #00aad4;
  z-index: -1;
  filter: blur(15px);
  -webkit-animation: blinkH1After 5s infinite;
  animation: blinkH1After 5s infinite;
}


.alert {
  padding: 15px;
  border: 1px solid transparent;
  border-radius: 4px;
}

.alert-info {
  color: #31708f;
  background-color: #d9edf7;
  border-color: #bce8f1;
}

.alert-warning {
  color: #8a6d3b;
  background-color: #fcf8e3;
  border-color: #faebcc;
}

.alert-danger {
  color: #a94442;
  background-color: #f2dede;
  border-color: #ebccd1;
}

.alert p {
  margin-bottom: 0;
}

.alert:empty {
  display: none;
}

.invalid-feedback {
  color: #a94442;
  display: block;
  margin: -1rem 0 2rem;
}


/* This file is for your main application CSS */

/* Alerts and form errors used by phx.new */
.alert {
  padding: 15px;
  border: 1px solid transparent;
  border-radius: 4px;
}

.alert-info {
  color: #31708f;
  background-color: #d9edf7;
  border-color: #bce8f1;
}

.alert-warning {
  color: #8a6d3b;
  background-color: #fcf8e3;
  border-color: #faebcc;
}

.alert-danger {
  color: #a94442;
  background-color: #f2dede;
  border-color: #ebccd1;
}

.alert p {
  margin-bottom: 0;
}

.alert:empty {
  display: none;
}

.invalid-feedback {
  color: #a94442;
  display: block;
  margin: -1rem 0 2rem;
}

/* LiveView specific classes for your customization */
.phx-no-feedback.invalid-feedback,
.phx-no-feedback .invalid-feedback {
  display: none;
}

.phx-click-loading {
  opacity: 0.5;
  transition: opacity 1s ease-out;
}

.phx-loading {
  cursor: wait;
}

.phx-modal {
  opacity: 1 !important;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.4);
}

.phx-modal-content {
  background-color: #fefefe;
  margin: 15vh auto;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
}

.phx-modal-close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.phx-modal-close:hover,
.phx-modal-close:focus {
  color: red;
  text-decoration: none;
  cursor: pointer;
}

.fade-in-scale {
  animation: 0.2s ease-in 0s normal forwards 1 fade-in-scale-keys;
}

.fade-out-scale {
  animation: 0.2s ease-out 0s normal forwards 1 fade-out-scale-keys;
}

.fade-in {
  animation: 0.2s ease-out 0s normal forwards 1 fade-in-keys;
}

.fade-out {
  animation: 0.2s ease-out 0s normal forwards 1 fade-out-keys;
}

@keyframes fade-in-scale-keys {
  0% {
    scale: 0.95;
    opacity: 0;
  }

  100% {
    scale: 1.0;
    opacity: 1;
  }
}
/* ... */

